--- a/algoviewapp/templates/sorting.html
+++ b/algoviewapp/templates/sorting.html
@@ -1,18 +1,27 @@
-{% extends "base.html" %}
+{% extends "algopages_base.html" %}
 {% load staticfiles %}
 
 {% block content %}
-    <h1>Insertion Sort</h1>
-    <p id="insertionsort"> </p>
-    <script src="/static/js/d3.js"></script>
-    <script src="/static/js/insertionsort.js"></script>
-    
-    <h1>Bubble Sort</h1>
-    <p id="bubblesort"></p>
-    <script src="/static/js/bubblesort.js"></script>
 
-    <h1> Selection Sort</h1>
-    <p id="selectionsort"></p>
-    <script src="/static/js/selectionsort.js"></script>
-    
+<div class="row">
+    <div class="col-md-6">
+        <h1>Insertion Sort</h1>
+        <p id="insertionsort"> </p>
+        <script src="/static/js/d3.js"></script>
+        <script src="/static/js/insertionsort.js"></script>
+    </div>
+    <div class="col-md-6">
+        <h1>Bubble Sort</h1>
+        <p id="bubblesort"></p>
+        <script src="/static/js/bubblesort.js"></script>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h1> Selection Sort</h1>
+        <p id="selectionsort"></p>
+        <script src="/static/js/selectionsort.js"></script>
+    </div
+</div>
 {% endblock %}
