--- a/algoviewapp/templates/algopages_base.html
+++ b/algoviewapp/templates/algopages_base.html
@@ -63,7 +63,7 @@
         <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
       <li>
-        <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> Contact </a>
+        <a href="/contact"><span class="glyphicon glyphicon-user"></span> Contact </a>
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
