added flocking alg page

--- a/algoviewapp/templates/index.html
+++ b/algoviewapp/templates/index.html
@@ -16,6 +16,7 @@
       <h3> Categories </h3>
       <ul>
         <li><a href="/sorting">Sorting Algorithms</a></li>
+        <li><a href="/flocking">Flocking</a></li>
       </ul>
     </div>
     <div class="col-md-6">
