--- a/algoviewapp/templates/algopages_base.html
+++ b/algoviewapp/templates/algopages_base.html
@@ -65,6 +65,7 @@
       <li>
         <a href="/contact"><span class="glyphicon glyphicon-user"></span> Contact </a>
       </li>
+<!--
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -80,6 +81,10 @@
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
           </ul>
       </li>
+-->
+    <li>
+      <a href=""><span class="glyphicon glyphicon-flash"></span> Blog </a>
+    </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
