--- a/algoviewapp/templates/base.html
+++ b/algoviewapp/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Algoderpp</title>
+  <link rel="icon" type="image/png" href="/static/image/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -64,6 +65,7 @@
       <li>
         <a href="/contact"><span class="glyphicon glyphicon-user"></span> Contact </a>
       </li>
+<!--
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -79,12 +81,18 @@
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
           </ul>
       </li>
+-->
+    <li>
+      <a href=""><span class="glyphicon glyphicon-flash"></span> Blog </a>
+    </li>
     </ul>
+<!--    
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
         <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Heroku Dev Center</a>
       </li>
     </ul>
+-->
   </div>
 </nav>
 
