updated helpful links on index page

--- a/algoviewapp/templates/index.html
+++ b/algoviewapp/templates/index.html
@@ -20,12 +20,10 @@
       </ul>
     </div>
     <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
+      <h3><span class="glyphicon glyphicon-link"></span>Helpful Links</h3>
       <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
+        <li><a href="http://d3js.org/">All about d3</a></li>
+        <li><a href="http://www.red3d.com/cwr/boids/">Boids and flocking</a></li>
       </ul>
     </div>
 </div>
