--- a/algoviewapp/templates/contact.html
+++ b/algoviewapp/templates/contact.html
@@ -5,8 +5,8 @@
 
 <div>
     <h1>Contact</h1>
-    <p>email: jl964@cornell.edu</p>
-    <p>github: <a href="https://github.com/jeonglee/">jeonglee</a></p>
+    <p>Email: jl964@cornell.edu</p>
+    <p>Github: <a href="https://github.com/jeonglee/">jeonglee</a></p>
 </div>
     
 {% endblock %}
