--- a/algoviewapp/templates/base.html
+++ b/algoviewapp/templates/base.html
@@ -82,8 +82,14 @@
           </ul>
       </li>
 -->
-    <li>
-      <a href=""><span class="glyphicon glyphicon-flash"></span> Blog </a>
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-list"></span> Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/sorting">Sorting Algorithms</a></li>
+            <li><a href="/flocking">Flocking</a></li>
+            <li class="divider"></li>
+            <li><a href="/">Home</a></li>
+          </ul>
     </li>
     </ul>
 <!--    
