--- a/algoviewapp/templates/index.html
+++ b/algoviewapp/templates/index.html
@@ -9,8 +9,19 @@
     <p>Algorithm visualizations with d3.js</p>
   </div>
 </div>
+<div>
+  <h1><a href="/sorting">Sorting Algorithms</a></h1>
+  <p id="index-insertionsort"> </p>
+  <script src="/static/js/d3.js"></script>
+  <script src="/static/js/insertionsort.js"></script>
+</div>
+<div>
+  <h1><a href="/flocking">Flocking Algorithms</a></h1>
+  <p id="index-flocking-animation"></p>
+  <script src="/static/js/flock.min.js"></script>
+  <script src="/static/js/flockexample.js"></script>
+</div>
 <div class="container">
-  <hr>
   <div class="row">
     <div class="col-md-6">
       <h3> Categories </h3>
