Add link to Boids algorithm

--- a/algoviewapp/templates/base.html
+++ b/algoviewapp/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Algoderpp</title>
+<title>Algoview</title>
   <link rel="icon" type="image/png" href="/static/image/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
