--- a/algoviewapp/templates/flocking.html
+++ b/algoviewapp/templates/flocking.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <h1> Boids flocking algorithm </h1>
+    <h1><a href="http://www.red3d.com/cwr/boids/">Boids</a></h1>
     <p id="flocking-animation"></p>
     <p>Boids flocking layout from <a href="https://github.com/shuw/flock">shuw</a></p>
 </div>
