--- a/algoviewapp/templates/sorting.html
+++ b/algoviewapp/templates/sorting.html
@@ -24,5 +24,13 @@
         <script src="/static/js/selectionsort.js"></script>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-6">
+        <h1>Quicksort</h1>
+        <p id="quicksort"></p>
+        <script src="/static/js/quicksort.js"></script>
+    </div>
+    
+</div>
 
 {% endblock %}
